ARROW-2711: [Python] Fix inference from Pandas column with first empty list